# Mandelbrot

./: .gitignore  CMakeLists.txt  README.md
Debug/: fragmentShader.fs
src/: main.cpp
